# Fundamental

./: .gitignore  EquityRoots_bug_list.md  dev  fetch  scorecards  snap
.claude/: launch.json
backlog_ideas/: concall.md  equityroots-audit-tracker.md  equityroots-audit-tracker.xlsx
docs/: BACKLOG.md  COMMANDS.md  DEPLOYMENT_VERCEL.md  EquityRoots_Architecture_LLD.key  EquityRoots_Architecture_LLD.pptx  EquityRoots_Status_2026-05-16.pptx  Feature notes.txt  Fundamental analysis metrics.txt  IDEAS_DESIGN.md  LAUNCH_NIFTY50.md  LLD.md  MOAT.md  NSE_Platform_Requirements_Analysis.pages  PITCH.md  REQUIREMENTS.md  RUNBOOK.md  Req_equityroots.txt  SCORECARDS_BY_INDUSTRY.md  SCORING_DESIGN.md  SNAPSHOT_CRON.md  STACK.md  WORKLOG.md  architecture.md  notes.pages  pillar calculations.pages  review.rtf  scorecards.md  scoring-engine.md  sector-clusters.md
etl/: pyproject.toml
etl/src/fundamental_etl/: business_info.py  cli.py  config.py  db.py  dq.py  log.py  officers.py  shareholding.py
etl/src/fundamental_etl/clusters/: assigner.py  rules.py
etl/src/fundamental_etl/nse/: results.py
etl/src/fundamental_etl/scoring/: formulas.py  metrics.py  scorecards.py  scorer.py  seed_scorecards.py
etl/src/fundamental_etl/screener/: parser.py  persist.py  scraper.py
scripts/: apply-corp-adjustments.py  audit-price-coverage.py  audit-renamed-tickers.py  backfill-all-gaps.sh  backfill-fii-dii.py  backfill-nse-bhavcopy.py  backfill-prices-neon.sh  backfill-universe-isin.py  build-index-weights.py  build-market-snapshot.py  check-dq.py  check-drift.py  check-freshness.py  (+23 more)
(+235 files in other folders)
