[project]
name = "fundamental-etl"
version = "0.1.0"
description = "ETL + scoring engine for the NSE Equity Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "typer>=0.12",
    "tenacity>=9.0",
]

[project.scripts]
etl = "fundamental_etl.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
